--- a/src/view/index.html
+++ b/src/view/index.html
@@ -19,11 +19,13 @@
 </body>
 </html>
 
-<script async src="./es-module-shims.js"></script>
+<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 <script type="importmap">
 {
   "imports": {
-    "three": "./three.module.js"
+    "three": "https://cdn.jsdelivr.net/npm/three@0.176.0/build/three.module.js",
+    "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.176.0/examples/jsm/",
+    "stats": "https://raw.githubusercontent.com/mrdoob/stats.js/refs/heads/master/build/stats.module.js"
   }
 }
 </script>
